package edu.hitsz.factory;

import edu.hitsz.aircraft.AbstractEnemyAircraft;

public abstract class AbstractEnemyFactory {
    public abstract AbstractEnemyAircraft createEnemy();

}
